--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/icon_home/
     - assets/icon_cloud/
     - assets/icon_stars/
+    - assets/icon_child_info/
 
   fonts:
     - family: Quicksand
